--- a/src/vista/Registro.form
+++ b/src/vista/Registro.form
@@ -229,7 +229,7 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="TextContraseña" min="-2" pref="155" max="-2" attributes="0"/>
-                                          <Component id="TextUsuario" min="-2" pref="155" max="-2" attributes="0"/>
+                                          <Component id="TextNomUsuario" min="-2" pref="155" max="-2" attributes="0"/>
                                           <Component id="TextCorreo" min="-2" pref="155" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
@@ -246,7 +246,7 @@
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel7" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                          <Component id="TextUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TextNomUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
@@ -311,9 +311,9 @@
                 <Property name="text" type="java.lang.String" value="CONTRASE&#xd1;A:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="TextUsuario">
+            <Component class="javax.swing.JTextField" name="TextNomUsuario">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TextUsuarioActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TextNomUsuarioActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel10">
