--- a/src/vista/PaginaPrincipal.form
+++ b/src/vista/PaginaPrincipal.form
@@ -274,9 +274,12 @@
                   <Image iconType="3" name="/Imagenes/Iconos/shopping-cart-add-button_icon-icons.com_56132.png"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel2MouseClicked"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JPanel" name="jPanel6">
               <Properties>
@@ -342,7 +345,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="AGREGAR AL CARRITO"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
               <Events>
@@ -413,7 +416,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="AGREGAR AL CARRITO"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
               <Events>
